--- a/app/views/streets/_galaxy.html.erb
+++ b/app/views/streets/_galaxy.html.erb
@@ -57,7 +57,7 @@
     <div class="box">
 		
 
-              <%= link_to "ingresar", new_car_session_path %>
+              <%= link_to "iniciar sesion", new_car_session_path %>
 	</div>
    
 
